--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             content="Laravel and Vue Developer who have 2 years experience. Visit my profile for see more information"
         />
         <meta property="twitter:image" content="/images/logo.png" />
-        <title>Rido Ananda | Web Developer & UI/UX Designer</title>
+        <title>Dheo Putranta | ML and DevOps </title>
     </head>
     <body>
         <div id="app"></div>
