update profile and dev

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://ridoananda.com" />
-        <meta property="og:title" content="Rido Ananda | Web Developer & UI/UX Designer" />
+        <meta property="og:title" content="Dheo Putranta Pandia | ML Engineer & Backend" />
         <meta
             property="og:description"
             content="Laravel and Vue Developer who have 2 years experience. Visit my profile for see more information"
